istio/deploy-testserver.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: stress-sg
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stress-module
  namespace: stress-sg
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stress-module
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: stress-module
    spec:
      containers:
        - image: harbor.test.shopeemobile.com/devops-sz/test-server:feat-test
          imagePullPolicy: Always
          command:
            - ./server
            - --http-port=8080
            - --grpc-port=8181
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /health
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 2
          name: testserver
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8181
              protocol: TCP
          resources:
            limits:
              cpu: 100m
              memory: 100Mi
            requests:
              cpu: 100m
              memory: 100Mi
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: stress-module
  name: stress-module-test-sg
  namespace: stress-sg
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
    - name: grpc
      port: 8181
      targetPort: 8181
  selector:
    app: stress-module
  type: ClusterIP
